--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.ts",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "tsd install",
+    "compile": "tsc",
+    "prepublish": "tsc",
+    "pretest": "tsc",
+    "test": "mocha test/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -26,5 +30,8 @@
     "mocha": "^2.2.5",
     "tsd": "^0.6.3",
     "typescript": "^1.6.0-dev.20150816"
+  },
+  "dependencies": {
+    "ts-events": "^2.0.0"
   }
 }
