--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "private": true,
   "scripts": {
     "postinstall": "tsd install",
-    "compile": "tsc --declaration",
+    "compile": "tsc --declaration; node makebundle.js;",
     "prepublish": "tsc",
     "pretest": "tsc",
     "test": "mocha test/**/*.js"
