--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "./index.js",
   "typings": "./ts-observable.d.ts",
   "typescript": {
-        "definition": "./ts-observable.d.ts"
-    },
+    "definition": "./ts-observable.d.ts"
+  },
   "private": true,
   "scripts": {
     "postinstall": "tsd install",
@@ -37,6 +37,6 @@
     "typescript": "^1.6.0-dev.20150816"
   },
   "dependencies": {
-    "ts-events": "^2.0.0"
+    "eventemitter3": "^1.1.1"
   }
 }
