--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "sourceMap": true
     },
     "files": [
+        "./typings/tsd.d.ts",
         "./index.ts",
         "./test/observable.spec.ts",
         "./test/observableCollection.spec.ts"
