--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   ],
   "scripts": {
     "build": "tsc",
-    "prepare" : "npm run build",
+    "lint": "eslint src/**/*.ts",
+    "prepare": "npm run build",
     "test": "jest --config jestconfig.json --verbose false"
   },
   "repository": {
@@ -35,6 +36,9 @@
     "typescript": "^3.5.2"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
+    "eslint": "^5.16.0",
     "eventemitter3": "^3.1.2"
   }
 }
